--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-server": "~4.0.1",
     "@angular/router": "~4.0.1",
     "@angular/upgrade": "~4.0.1",
+    "ag-grid": "^14.2.0",
+    "ag-grid-angular": "^14.2.0",
     "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
